<resources>
    <string name="error_title">A system error has occurred</string>
    <string name="error_message1">The Loopeli app may no longer function as expected.</string>
    <string name="error_message2">Please restart the app to continue.</string>
    <string name="restart_button">RESTART</string>
    <string name="quit_button">QUIT</string>
    <string name="show_details">SHOW DETAILS</string>
    <string name="hide_details">HIDE DETAILS</string>
</resources>
